# mandbrot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  setting.rs  state.rs
src/shader/: shader.frag  shader.vert
