[package]
name = "mandbrot"
version = "0.1.0"
authors = ["yanfeng.li <86966524@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
wgpu = "0.7"
futures = "0.3"
env_logger = "0.7"
log = "0.4"
bytemuck = {version = "1.5.1", features = ["derive"]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

